# adventofcode

./: .gitignore  README.md  aoc.code-workspace
2019/: .gitignore  .tool-versions  Makefile  justfile  pyproject.toml
2019/adventofcode/: app.py  run.py  utils.py
2019/adventofcode/exercises/: __init__.py  exercise_1.py  exercise_2.py  exercise_3.py  exercise_4.py
2019/tests/exercises/: test_exercise_1.py  test_exercise_2.py  test_exercise_3.py  test_exercise_4.py
2021/: .gitignore  .tool-versions  justfile  pyproject.toml
2021/adventofcode/: app.py  run.py  utils.py
2021/adventofcode/exercises/: __init__.py  exercise_1.py  exercise_10.py  exercise_11.py  exercise_12.py  exercise_13.py  exercise_14.py  exercise_15.py  exercise_16.py  exercise_17.py  exercise_18.py  exercise_19.py  exercise_2.py  exercise_20.py  exercise_21.py  exercise_22.py  exercise_23.py  exercise_24.py  exercise_25.py  exercise_3.py  exercise_4.py  exercise_5.py  exercise_6.py  exercise_7.py  exercise_8.py  exercise_9.py
2021/tests/: test_exercise_1.py  test_exercise_2.py  test_exercise_3.py  test_exercise_4.py  test_exercise_5.py  test_exercise_6.py  test_exercise_7.py
2021/tests/exercises/: test_exercise_1.py  test_exercise_10.py  test_exercise_11.py  test_exercise_12.py  test_exercise_13.py  test_exercise_14.py  test_exercise_15.py  test_exercise_16.py  test_exercise_17.py  test_exercise_18.py  test_exercise_19.py  test_exercise_2.py  test_exercise_20.py  test_exercise_21.py  test_exercise_22.py  test_exercise_23.py  test_exercise_24.py  test_exercise_25.py  test_exercise_3.py  (+6 more)
(+198 files in other folders)
