[tool.poetry]
name = "adventofcode"
version = "2021"
description = "Advent of Code"
authors = ["Thom Hopmans"]

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.6.0"
numpy = "^1.24.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.13"
black = "^24.3.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
