[project]
name = "adventofcode"
version = "2021"
description = "Advent of Code"
authors = [{name = "Thom Hopmans"}]

requires-python = ">= 3.12, <3.13"

dependencies = [
    "loguru >=0.6.0, <1",
    "numpy >=1.24.1, <2"
]

[tool.uv]
dev-dependencies = [
    "ruff >= 0.1.13, <1",
    "black >= 24.3.0, <25",
    "pytest >= 7.4.0, <8"
]   
    
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
